<resources>
    <string name="app_name">Gather</string>
    <!--login activity-->
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="label_forgot_password">Forgot Password?</string>
    <string name="label_login">Sign in</string>
    <string name="label_login_google">Sign in with Google</string>
    <string name="label_create_with_email">Register</string>
    <string name="label_reset_pass">Reset Password</string>
    <string name="label_reset_pass_message">Enter your account email.</string>

    <!--register activity-->
    <string name="label_confirm_password">Confirm Password</string>
    <string name="label_firstName">First Name</string>
    <string name="label_lastName">Last Name</string>
    <string name="label_phone_number">Phone Number</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_register">Register</string>

    <!--event create activity-->
    <string name="tab_text_1">Overview</string>
    <string name="tab_text_2">Tasks</string>
    <string name="tab_text_3">Budget</string>

    <!--event details activity-->
    <string name="label_details">Details</string>
    <string name="label_people">People</string>
    <string name="title_attending">Attending</string>
    <string name="title_invited">Invited</string>
    <string name="title_declined">Declined</string>

    <!--home fragment-->
    <string name="tab_label_upcoming">Upcoming</string>
    <string name="tab_label_drafts">Drafts</string>

    <!--create event activity-->
    <string name="label_event_title">Title</string>
    <string name="label_event_date">Date</string>
    <string name="label_event_time">Time</string>
    <string name="label_event_location">Location</string>
    <string name="label_event_description">Description</string>
    <string name="label_guest_list">Guest List</string>
    <string name="label_add_guests">Add Guests</string>
    <string name="label_clear_guests">Clear Guest List</string>
    <string name="label_add_guest">Enter Email</string>
    <string name="label_add_guest_message">Enter the email of the guest you would like to invite.</string>

    <!--nav bar-->
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_new_gathering">New Gathering</string>
    <string name="title_notification">Notifications</string>
    <string name="title_profile">Profile</string>

    <!--calendar fragment-->
    <string name="events_this_month">Events this month</string>

    <!--profile fragment-->
    <string name="label_logout">Log Out</string>
    <string name="label_first_name">First</string>
    <string name="label_last_name">Last</string>
    <string name="label_user_email">email</string>
    <string name="label_edit_profile">Edit Profile</string>
    <string name="bio">Bio</string>
    <string name="save">Save</string>

    <!--notification fragment-->
    <string name="notification_title_event">You\'ve Been Invited To:</string>
    <string name="notification_title_friend">Friend Request From:</string>

    <!--button text-->
    <string name="button_accept">Accept</string>
    <string name="button_decline">Decline</string>
    <string name="gatherings">Gatherings</string>
    <string name="people">People</string>

    <!--recyclerview item text-->
    <string name="tap_for_info">Tap for more info</string>
</resources>