<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_round_home_24"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_round_search_24"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_create_event"
        android:icon="@drawable/ic_round_add_24"
        android:title="@string/title_new_gathering" />

    <item
        android:id="@+id/navigation_notification"
        android:icon="@drawable/ic_round_notifications_24"
        android:title="@string/title_notification" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_round_person_24"
        android:title="@string/title_profile" />

</menu>