<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="24dp"
        android:paddingBottom="24dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/imgCard"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <ImageView
                android:id="@+id/imageView_createEvent_displayPic"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:src="@drawable/ic_round_add_photo_alternate_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView_createEvent_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="22dp"
            android:labelFor="@id/editText_createEvent_title"
            android:text="@string/label_event_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgCard" />

        <EditText
            android:id="@+id/editText_createEvent_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:drawableStart="@drawable/ic_round_short_text_24"
            android:ems="10"
            android:maxLength="50"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_createEvent_title" />

        <TextView
            android:id="@+id/textView_createEvent_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="22dp"
            android:labelFor="@id/editText_createEvent_date"
            android:text="@string/label_event_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_createEvent_title" />

        <EditText
            android:id="@+id/editText_createEvent_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:drawableStart="@drawable/ic_round_date_range_24"
            android:ems="10"
            android:editable="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_createEvent_password" />

        <TextView
            android:id="@+id/textView_createEvent_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="22dp"
            android:labelFor="@id/editText_createEvent_location"
            android:text="@string/label_event_location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_createEvent_date" />

        <EditText
            android:id="@+id/editText_createEvent_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:drawableStart="@drawable/ic_round_location_on_24"
            android:ems="10"
            android:maxLength="50"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_createEvent_location" />

        <TextView
            android:id="@+id/textView_createEvent_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="22dp"
            android:labelFor="@id/editText_createEvent_description"
            android:text="@string/label_event_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_createEvent_location" />

        <EditText
            android:id="@+id/editText_createEvent_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:drawableStart="@drawable/ic_round_description_24"
            android:ems="10"
            android:maxLength="200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_createEvent_description" />

        <TextView
            android:id="@+id/textView_guest_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="22dp"
            android:labelFor="@id/editText_guest_list"
            android:text="@string/label_guest_list"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_createEvent_description" />

        <EditText
            android:id="@+id/editText_guest_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:drawableStart="@drawable/ic_round_people_alt_24"
            android:ems="10"
            android:editable="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_guest_list" />

        <Button
            android:id="@+id/clear_guests"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:text="@string/label_clear_guests"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_guest_list" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>